_base-mobile.scss
// Note: I've just begun to use sass for the colours, I'm sure there's more
//       refactoring that could happen when I get chance.


// Define default grey colour scheme, unless already defined.
$doc-bg: #333333 !default;
$section-bg: #444444 !default;
$subsection-bg: #555555 !default;
$menu-bg: #555555 !default;
$menu-fg: #eeeeee !default;
$link-fg: #bbbbbb !default;
$highlight-fg: #cccccc !default;
$body-fg: #eeeeee !default;
$body-em: #ffffff !default;
// Define main fonts, these may well already be defined.
$body-font: sans-serif !default;
$body-weight: normal !default;
$body-bold-weight: bold !default;
$heading-font: sans-serif !default;
$heading-weight: normal !default;
$monospace-font: monospace !default;
$monospace-weight: normal !default;
// Define backups, these are unlikely to be defined but may be.
$backup-font: sans-serif !default;
$backup-monospace-font: monospace !default;

// Default to having text shadow
$shadow: true !default;

@mixin font-family-list($main, $backup) {
  @if $main == $backup {
    font-family: $main;
  } @else {
    font-family: $main, $backup;
  }
}

body {
  @include font-family-list($body-font, $backup-font);
  font-weight: $body-weight;
  background-color: $doc-bg;
  padding: 0;
  margin: 0;
  color: $body-fg;
  @if $shadow {
    text-shadow: 0 1px 1px black;
  } @else {
    text-shadow: none;
  }
  -webkit-text-size-adjust: 100%;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-size: 110%;
  line-height: 1.5;
}

.sitemenu-container {
  positive: relative;
  display: inline-block;
}

.sitemenu-button {
  background-color: #073642;
  color: #839496;
  padding: 1px 12px;
  margin: 1px 20px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 100%;
  border: 0;
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.sitemenu-content {
  display: none;
  padding: 1em;
  position: absolute;
  background-color: #073642;
  color: #839496;
  z-index: 1;
  right: 10px;
}

.sitemenu-content a {
  display: block;
  padding: 0.2em 0.5em;
  color: #839496;
}

.show {
  display: block;
}

/* HTML5 tags */
header, section, footer,
aside, nav, article, figure {
  display: block;
}

h1, h2, h3, h4, h5, h6 {
  font-weight: $body-bold-weight;
  line-height: 1.2;
}

header {
  margin: 0;
  padding: 0;
}

nav {
  margin: 1em 0 0;
  padding: 0;
  text-align: center;
  color: $body-em;
}

nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  text-indent: 0;
}

nav li {
  display: inline;
  margin: 0 1em;
  padding: 1em 0.5em;
  padding: 0.5em;
  background-color: $section-bg;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
}

nav a {
  display: inline-block;
  color: $highlight-fg;
}

nav li.active {
  background-color: $highlight-fg;
  box-shadow: none;
}

nav li.active a {
  color: $section-bg;
}

div.document {
  max-width: max-content;
  margin: auto;
}

body > h1, h1.title {
  @include font-family-list($heading-font, $backup-font);
  text-align: center;
  font-weight: $heading-weight;
  color: $highlight-fg;
  text-shadow: 0 2px 4px rgba(0,0,0,0.3);
  padding: 0;
}

@media screen and (min-width: 601px) {
  h1.title {
    font-size: 240%;
    margin: 2em 0 0 0;
  }
}

@media screen and (max-width: 600px) {
  h1.title {
    font-size: 140%;
    margin: 3em 0 0 0;
  }
  p.paginator {
    font-size: 80%;
  }
}

div.body > h1 {
  @include font-family-list($body-font, $backup-font);
  text-align: left;
  font-size: 1.2em;
  font-weight: $body-bold-weight;
  color: $body-em;
  margin: 0;
  padding: 0;
  width: 90%;
  border-bottom: 1px dotted $link-fg;
}

.byline {
  @include font-family-list($body-font, $backup-font);
  font-weight: $body-weight;
  font-variant: small-caps;
  font-size: 40%;
  margin: 0;
  padding: 0.5ex 0 0;
  line-height: 1;
  @if $shadow {
    text-shadow: 0 1px 1px black;
  } @else {
    text-shadow: none;
  }
  color: $highlight-fg;
}

#logo {
  z-index: 999;
  position: fixed;
  left: 0px;
  top: 0px;
  width: 60px;
  border: 0;
  margin: 1px;
  border-radius: 50%;
  -moz-border-radius: 50%;
  -webkit-border-radius: 50%;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
}

div.fixed-top {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
}

div.related {
  background-color: $menu-bg;
  color: $menu-fg;
  margin: 0;
  padding: 0.2em;
  clear: both;
  font-size: 0.8em;
  z-index: 998;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
}

div.related li.breadcrumb-history {
  display: none;
}

div.related li.breadcrumb-current {
  font-weight: $body-bold-weight;
}

div.related h3 {
  display: none;
}

div.related ul {
  display: inline;
  list-style: none;
  margin: 0;
  padding: 0;
}

div.related li {
  display: inline;
}

div.related ul.right {
  float: right;
}

div.related a {
  color: $menu-fg;
}

div.section {
  background-color: $section-bg;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  margin: 2em auto;
  padding: 0 0 1em 0;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
}

div.document > div.section {
  margin: 2em 2em;
}

div.section div.article-summary {
  border-bottom: 1px solid $doc-bg;
  font-size: 90%;
  font-style: italic;
  line-height: 1.4;
  color: $link-fg;
  margin: 0;
  padding: 0.5em 1em 0.5em;
}

div.section > div.toc {
  font-size: 80%;
  padding: 0.5em;
  margin: 1em 0.5em;
  border: 1px dotted $link-fg;
  border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  -webkit-border-radius: 0.5em;
  width: max-content;
}

div.section > div.toc > span.toctitle {
  font-weight: $body-bold-weight;
}

div.section div.article-summary p {
  margin: 0;
  padding: 0;
}
/* ... */

